--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 tqdm==4.65.0
-torch==2.0.0+cu118
+# torch==2.0.0+cu118
 numpy==1.22.4
 annoy==1.17.2
 optuna==3.1.1
 pandas==1.5.3
 similaripy==0.1.3
+cython
